# segmentoj-judger

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/config/: mod.rs
src/task/: content.rs  mod.rs  queue.rs  run.rs  test.rs
src/tools/: mod.rs
