[package]
name = "segmentoj-judger"
version = "0.1.0"
authors = ["zhangtianli2006 <zhangtianli2006@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"
directories = "3.0.1"
reqwest = "0.11.0"
tokio = { version = "1", features = ["full"] }
json = "0.12.4"